# kernels

./: Generating_sentences_and_markov_models.ipynb  Generating_sentences_and_markov_models.py  README.md  ab_testing.ipynb  approaching_any_nlp_problem.py  basic_visualisations.ipynb  datascience_framework.ipynb  datascience_framework.py  fake_news.ipynb  fake_news.py  mercari.ipynb  mercari.py  mercari_using_pytorch.ipynb  mercari_using_pytorch.py  pytorch1.ipynb  pytorch1.py  pytorch2.ipynb  pytorch2.py  pytorch3_activation.ipynb  pytorch3_activation.py  pytorch4_regression.ipynb  pytorch4_regression.py  pytorch4_rnn_regression.ipynb  pytorch4_rnn_regression.py
LLMs/: embeddings.py  readme.md  transcript.txt
LLMs/agent_frameworks/wedding_planner/: README.md  pyproject.toml
LLMs/agent_frameworks/wedding_planner/src/wedding_planner/: crew.py  main.py
LLMs/agent_frameworks/wedding_planner/src/wedding_planner/config/: agents.yaml  tasks.yaml
LLMs/agent_frameworks/wedding_planner/src/wedding_planner/tools/: custom_tool.py
NLP/: approaching_any_nlp_problem.ipynb  prompt_tuning_example_using_t2t_tuner.ipynb  simple fasttext supervised training.ipynb  simple lstm for text classification.ipynb  universal_sentence_encoder_example.ipynb
computing_best_estimators/: cross_validation-complete.ipynb  cross_validation_partial.ipynb  regularisation_complete.ipynb
customer_complaints_redressal/: twitter consumer complaints data.ipynb
graphs/: node2vec with movielens.ipynb
hypothesis-testing/: hypothesis testing.ipynb  logistic regression from scratch.ipynb  (+1 more)
(+59 files in other folders)
